--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,12 @@ section {
     font-family: 'Noto+Sans+TC';
     font-weight: 600;
 }
+.text_all {
+    transition: transform 0.5s ease; /* 平滑過渡效果 */
+}
+.text_all:hover {
+    transform: translate(-10px, -10px); /* 移動位置 */
+}
 
 .text1,
 .text2,
@@ -267,17 +273,21 @@ section {
     /* 图片居中 */
     display: block;
     /* 将图片作为块级元素 */
-    animation: spin 10s linear infinite;
+    animation: spin 10s linear infinite; 
     /* 启动动画 */
+    animation-delay: 0.67s;
+
 }
 
 @keyframes spin {
     0% {
         transform: rotate(0deg);
+        
     }
 
     100% {
         transform: rotate(360deg);
+        
     }
 }
 
