0829-Chocolate_custom_screen3

--- a/css/Customization.css
+++ b/css/Customization.css
@@ -105,7 +105,7 @@ body {
     display: none;
 }
 
-#menu_id_search li{
+#menu_id_search_li{
 display: flex;
 justify-content: center;
 align-items: center;
