--- a/css/index.css
+++ b/css/index.css
@@ -647,6 +647,7 @@ section {
     font-weight: 600;
     font-size: 2vw;
     line-height: 4.5vw;
+    font-family: Noto Serif TC;
 }
 #INGREDIENT .pic {   
     width: 30vw;
@@ -696,8 +697,6 @@ section {
     /* 拱门的宽度 */
     height: 27vw;
     /* 拱门的高度，增加底部的拉长效果 */
-    background-repeat: no-repeat;
-    /* 背景颜色 */
     border-radius: 15vw 15vw 0 0;
     /* 圆角设置成拱门的顶部弧形 */
     margin: 10px auto;
@@ -711,81 +710,61 @@ section {
 #TASTE {
     position: relative;
     width: 100%;
-    /* height: 100%; */
-    /* background-image: url(../index_images/bg-b.png); */
-    background-color: #CCA568;
+    height: 60vw; 
+    background-image: url(../index_images/bg-b.png); 
     background-size: cover;
     text-align: center;
     background-repeat: no-repeat;
     background-position: center;
 }
 
-/* #TASTE .{
-    background-image: url(../index_images/taste.svg);
-} */
-#TASTE .title {
-    width: 24vw;
-    
-}
-
-#TASTE .pic {
-   
-    width: 30vw;
-    
-
+.taste_l{
+position: absolute;
+left: 0;
+display: flex;
+flex-direction: row-reverse;
+width: 30vw;
+top:3vw;
 }
 
 #TASTE .box_br {
-    
     background-color: var(--block_brown-op0);
-    opacity: 0.3;
     width: 14vw;
     height:  14vw;
-    top: 300px;
-    left: 40vh;
+    margin-left: -5vw;
 }
 
 #TASTE .cn_title {
-    position: absolute;
-    z-index: 6;
-    left: 40vh;
-    top: 35vh;
+    
     font-family: Noto Serif TC;
     color: var(--text);
     font-weight: 600;
-    font-size: 2rem;
+    font-size: 2vw;
     writing-mode: vertical-rl;
     /* 设置文字竖排，从右到左 */
     text-align: start;
     /* 文字对齐 */
     height: 100%;
     /* 高度，可以根据需要调整 */
+    margin-top: -1vw;
+    margin-left: -2vw;
 
 }
 
 
 #TASTE .arch {
     position: absolute;
-    z-index: 4;
-    width: 380px;
+    width: 21vw;
     /* 拱门的宽度 */
-    height: 500px;
+    height: 27vw;
     /* 拱门的高度，增加底部的拉长效果 */
-    left: 30vw;
-    top: 30vh;
-
-    text-align: center;
-    background-repeat: no-repeat;
-    /* 背景颜色 */
-    border-radius: 220px 220px 0 0;
+    border-radius: 15vw 15vw 0 0;
     /* 圆角设置成拱门的顶部弧形 */
-    overflow: hidden;
-    /* 隐藏溢出的部分 */
     margin: 10px auto;
     /* 居中拱门 */
     border: white solid 2px;
-    width: 300px;
-    height: 420px;
+    margin-left: 6vw;
+    margin-top: -1vw;
 
 
 }
@@ -793,16 +772,12 @@ section {
 #TASTE .text_all {
     z-index: 5;
     position: absolute;
-    top: 20vh;
-    left: 30vw;
     display: flex;
     width: 400px;
-    height: 100%;
+    height: 50vw;
     color: var(--text);
-    font-size: 1rem;
-    align-items: flex-start;
-    font-style: 'Noto+Sans+TC';
-    font-weight: 400;
+    margin-left: 10vw;
+    margin-top: 5vw;
 
 }
 
@@ -815,11 +790,8 @@ section {
     text-align: start;
     /* 文字对齐 */
     /* border: 1px solid black;   边框，方便查看效果 */
-    padding: 10px;
-    /* 内边距 */
     height: 100%;
-    /* 高度，可以根据需要调整 */
-    width: 50px;
+   
 }
 
 #TASTE .text2,
@@ -831,11 +803,29 @@ section {
     padding-top: -3rem;
 }
 
+.taste_r{
+    position: absolute;
+    right: 30vw;
+}
+#TASTE .title {
+    width: 24vw;
+    margin-top: 10vw;
+    margin-bottom: -11vw;
+    margin-left: 15vw;
+}
+
+
+#TASTE .pic {
+    width: 30vw;
+    margin-top: 4vw;
+}
+
 #APPERANCE {
     position: relative;
     width: 100%;
     /* height: 100%; */
-    background-image: url(../index_images/appearance--bg.jpg);
+    background-color: #CCA568;
+    /*background-image: url(../index_images/appearance--bg.jpg); */
     background-size: cover;
     text-align: center;
     background-repeat: no-repeat;
